re PR middle-end/83164 (internal compiler error: verify_gimple failed)

PR middle-end/83164
	* tree-cfg.c (verify_gimple_assign_binary): Don't require
	types_compatible_p, just that TYPE_MODE is the same.

	* gcc.c-torture/compile/pr83164.c: New test.

From-SVN: r255470